add function card0 to create and populate current weather elements in the DOM

--- a/style.css
+++ b/style.css
@@ -2,15 +2,24 @@ body {
     align-items: center;
     justify-content: center;
 }
+
   
-.img01 {
+#img01 {
     border: none;
     width:10px;
     height:10px;
     border-radius:10px;
 }
 
-.container00 {
+#current01 {
+    border: none;
+    width: 60px;
+    height: 60px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+}
+
+#searchContainer {
     align-items: center;
     justify-content: center;
     text-align:center;
@@ -18,7 +27,7 @@ body {
     border-radius:10px;
 }
 
-.container01.background {
+#weatherContainer01 {
     font-family: 'Courier New', Courier, monospace;
     align-items: center;
     text-align:center;
