add drag and move function to DOM element weatherContainer01

--- a/style.css
+++ b/style.css
@@ -38,5 +38,8 @@ body {
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
+    position: absolute;
+    left: 42.95%;
+    top: 9%;
 
 }
